# templates/schemavaults-next-app/src/app/api/greet/[name]/route.ts
@@ -1,19 +1,4 @@
-import { createApiRoute } from "@/lib/api/create-api-route";
+import { apiRoute } from "@/lib/api/api";
 import { createGreeting, getGreeting } from "./operations";
 
-export const { GET, POST } = createApiRoute(
-  getGreeting.implement(async ({ params, query, reply }) => {
-    const message = `${query.greeting}, ${params.name}!`;
-    return reply(200, {
-      message: query.shout ? message.toUpperCase() : message,
-      name: params.name,
-    });
-  }),
-
-  createGreeting.implement(async ({ params, body, reply }) =>
-    reply(201, {
-      message: `${body.greeting}, ${params.name}${body.punctuation}`,
-      name: params.name,
-    }),
-  ),
-);
+export const { GET, POST } = apiRoute([getGreeting, createGreeting]);
